fix responsive on mobile view

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -336,10 +336,10 @@ body {
 
     .middleLeft {
         display: block;
-        width: 788px;
+        width: 112%;
         font-size: 16px;
-        margin-top: 15px;
-        margin-bottom: 15px;
+        margin-top: 10px;
+        margin-bottom: 10px;
         margin-left: 14%;
         margin-right: 0%;
 
@@ -347,9 +347,9 @@ body {
 
     .middleRight {
         display: block;
-        width: 788px;
+        width: 112%;
         font-size: 16px;
-        margin-top: 15px;
+        margin-top: 5px;
         margin-left: 14%;
         margin-right: 0%;
         height: 80px;
@@ -373,10 +373,10 @@ body {
         font-size: 18px;
         background-color: #8CCDF5;
         padding: 5px;
-        height: 85px;
+        height: 100px;
     }
     .footer {
-        margin-top: 20px;
+        margin-top: 25px;
     }
 }
 
@@ -491,5 +491,15 @@ body {
 
     .pageContainer {
         margin-left: 0px;
+        height: 1400px;
+    }
+
+    .sampleInfo {
+        float: right;
+        margin-left: 5px;
+        display: inline-block;
+        vertical-align: top;
+        max-width: 185px;
+        margin-top: 5px;
     }
 }
